feat:update client add method get providerlistwithmodels
